# stack-auth

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LLM.md  NETSUITE_OAUTH_IMPLEMENTATION.md  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  cloudbuild-pr.yml  cloudbuild.yaml  cloudbuild.yml  cloudeploy-kubernetes.yml  delete-changelogs.js  deploy-kubernetes.sh  docker-compose.yml  migrate-docs.js  package-lock.json  package.json  (+10 more)
.changeset/: config.json
.claude/: CLAUDE-KNOWLEDGE.md  settings.json
.context/retros/: 2026-03-12-1.json
.cursor/commands/: pr-comments-review.md  pre-push.md  repro-fix.md
.cursor/hooks/: lint-file.sh  stop-check.sh
.cursor/rules/: backend.mdc  dashboard.mdc  general.mdc  testing.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/recurseml-rules/: code_patterns.mdc  naming.mdc
.github/workflows/: all-good.yaml  auto-update.yaml  check-prisma-migrations.yaml  codebuild-test.yaml  docker-emulator-test.yaml  (+21 more)
.rules/: port_number_validation.mdc  type_safe_config_values.mdc  validate_config_access.mdc  validate_config_updates.mdc
claude/: CLAUDE-KNOWLEDGE.md
configs/: tsup.ts
docker/: readme.md
docs/: .env  .env.development  .eslintrc.json  .gitignore  CHANGELOG.md  README.md  docs-platform.yml  instrumentation-client.ts  middleware.ts  next.config.mjs  package.json  payment-scenarios-1.md  payment-scenarios-2.md  payment-scenarios-4.md  payment-scenarios-outcomes.md  payment-scenarios.md  redirects.json  source.config.ts  stack.ts
docs-mintlify/: .gitignore  README.md  docs.json  index.mdx  package.json  style.css
fuma/: package-lock.json  package.json  source.config.ts
scratch/: foo.py
scripts/: changelog-manager.ts  check-docker.sh  fix-docker.sh  generate-sdks.ts  interactive-changelog.ts  kill-dev-servers.sh  postinstall-patch-next-async-debug-info.mjs  restart-dev-basic.sh  set-process-title.js  start-dev.sh  utils.ts
sdks/implementations/python/: README.md  pyproject.toml
sdks/implementations/python/src/stack_auth/: __init__.py  _app.py  _auth.py  _client.py  _constants.py  _jwt.py  _pagination.py  _token_store.py  _types.py  errors.py
sdks/implementations/python/src/stack_auth/models/: __init__.py  _base.py  api_keys.py  contact_channels.py  data_vault.py  email.py  notifications.py  oauth.py  payments.py  permissions.py  projects.py  sessions.py  teams.py  users.py
sdks/implementations/python/tests/: conftest.py  test_app.py  test_auth.py  test_client.py  test_e2e.py  test_errors.py  test_jwt.py  test_token_store.py
sdks/implementations/python/tests/test_models/: test_pagination.py  test_teams.py  test_users.py
tmp1/: Caddyfile
(+2929 files in other folders)
